--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -7,10 +7,11 @@
               launcher.click();
               };
             </script>
-            <h2 class="section-heading">How May We Help?</h2>
+            <h2 class="section-heading">Get Started</h2>
             <hr class="primary">
-            <p>Instela is currently available all across London.</p>
-            <p>Send us a message to get started</p>
+            <p>Instela is currently available all across London</p>
+            <p>Send us a message to get started or email us at help@instela.co</p>
+            <br>
             <%= link_to 'GET INSTANT HELP', '#', class: "btn btn-primary btn-xl page-scroll ", onclick:"event.preventDefault();openNSLauncher();"  %>
         </div>
     </div>
