--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Full Suite</h2>
+                <h2 class="section-heading">Our Services</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -13,28 +13,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-desktop wow bounceIn text-primary"></i>
                     <h3>Tech Support</h3>
-                    <p class="text-muted">WiFi network management, computer troubleshooting, Audio/Visual and conference room setup</p>
+                    <p class="text-muted">WiFi troubleshooting, virus removal, data recovery, Audio/Visual, conference room setup and more</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-wrench wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Handyman Assistance</h3>
-                    <p class="text-muted">Any work requiring tools, cabling, or paint</p>
+                    <h3>Handyman Assistance</h3> 
+                    <p class="text-muted">Any work requiring tools, including plumbing and electrical work</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-check-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Office Tasks</h3>
-                    <p class="text-muted">Simple assembly or anything that benefits from a helping hand</p>
+                    <p class="text-muted">Any errand that benefits from a helping hand</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-recycle wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Corporate Cleaning</h3>
-                    <p class="text-muted">Regularly scheduled cleaning needs and stocking supply</p>
+                    <p class="text-muted">Daily or weekly scheduled cleaning and supply stocking</p>
                 </div>
             </div>
         </div>
