--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -2,14 +2,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">How it works?</h2>
+                <h2 class="section-heading">How it Works</h2>
                 <hr class="light">
                 <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-power-off wow bounceIn"></i>
-                    <h3>On-Demand Support Pay As You Go</h3>
+                    <h3>On-Demand & Pay As You Go</h3>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -27,7 +27,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn" data-wow-delay=".3s"></i>
-                    <h3>Skilful Experts</h3>
+                    <h3>Verified Professionals</h3>
                 </div>
             </div>
         </div>
