--- a/app/views/creatives/_example.html.erb
+++ b/app/views/creatives/_example.html.erb
@@ -2,8 +2,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Examples</h2>
-                <hr class="primary">
+                <!-- <h2 class="section-heading">Examples</h2>
+                <hr class="primary"> -->
             </div>
         </div>
         <p></p>
