--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</a>
+            <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-1x fa-magic wow bounceIn style="colour: #FFFFFF"" ></i> Instela</a> <!-- style="colour: #FFFFFF" -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,12 +20,12 @@
                 <li>
                     <a class="page-scroll" href="#howitworks">How it works</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a class="page-scroll" href="#examples">Examples</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
-                </li>
+                </li> -->
                  <li>
                     <%- if account_signed_in? %>
                         <%=link_to 'MY ACCOUNT', edit_account_registration_path %>
