link mailto help@instela.co

--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -10,7 +10,7 @@
             <h2 class="section-heading">Get Started</h2>
             <hr class="primary">
             <p>Instela is currently available all across London</p>
-            <p>Send us a message to get started or email us at help@instela.co</p>
+            <p>Send us a message to get started or email us at <a href="mailto:help@instela.co">help@instela.co</a></p>
             <br>
             <%= link_to 'GET INSTANT HELP', '#', class: "btn btn-primary btn-xl page-scroll ", onclick:"event.preventDefault();openNSLauncher();"  %>
         </div>
