--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -8,11 +8,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-1x fa-magic wow bounceIn style="colour: #FFFFFF"" ></i> Instela</a> <!-- style="colour: #FFFFFF" -->
+            <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-1x fa-magic wow bounceIn" ></i>Instela</a> <!-- style="colour: #FFFFFF" -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class=" navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a class="page-scroll" href="#services">Our services</a>
