--- a/app/views/devise/passwords/_navbar.html.erb
+++ b/app/views/devise/passwords/_navbar.html.erb
@@ -24,9 +24,24 @@
                     <a class="page-scroll" href="/#examples">Examples</a>
                 </li> -->
                 <li>
-                    <!-- <a class="page-scroll" href="/#contact">Contact</a> -->
                     <a class="page-scroll" <%= link_to 'Contact Us', contact_path  %> </a>
+<!--                     <a class="page-scroll" href="/#contact">Contact</a>
+ -->            </li>
+                <li>
+                    <%- if account_signed_in? %>
+                        <%=link_to 'MY ACCOUNT', edit_account_registration_path %>
+                    <%- else %>
+                        <%= link_to 'LOG IN', new_account_session_path %>
+                    <% end %>
+                 </li>
+                <li id="register_button">
+                    <%- if account_signed_in? %>
+                        <%= link_to 'LOG OUT', destroy_account_session_path, method: :delete, class: "page-scroll btn btn-primary btn-lg outline"  %>
+                    <%- else %>
+                        <%= link_to 'SIGN UP', new_account_registration_path, class: "page-scroll btn btn-primary btn-lg outline" %>
+                    <% end %>
                 </li>
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
