--- a/app/views/devise/registrations/_navbar.html.erb
+++ b/app/views/devise/registrations/_navbar.html.erb
@@ -6,25 +6,26 @@
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> 
             </button>
-            <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</a>
+            <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</a> <!-- text-primary -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <!-- <li>
                     <a class="page-scroll" href="/#services">Our services</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="/#howitworks">How it works</a>
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a class="page-scroll" href="/#examples">Examples</a>
-                </li>
+                </li> -->
                 <li>
-                    <a class="page-scroll" href="/#contact">Contact</a>
+                    <a class="page-scroll" <%= link_to 'Contact Us', contact_path  %> </a>
+                    <!-- <a class="page-scroll" href="/#contact">Contact</a> -->
                 </li>
                 <li id="register_button">
                     <%- if account_signed_in? %>
