--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
     <div class="header-content">
         <div class="container-fluid">
             <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Sign Up To Order Services</h3>
+                <h3 style="text-align: center; color: white; font-weight: 700; font-size: 1.875em;">Sign Up To Order Services</h3>
                 <p></p>
                 <%= form_for(resource, as: resource_name, validate: true, url: account_registration_path(resource_name)) do |f| %>
                   <%= devise_error_messages! %>
@@ -47,7 +47,7 @@
                     <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
                   </div>
                   <div id="stripeResponse"></div>
-                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
+                  <p style="text-align: center; color: white;font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
                   By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:white; font-size:15px; text-decoration: underline;">TERMS AND CONDITIONS</a>
                 <% end %>
             </div>
