--- a/app/views/messages/_navbar.html.erb
+++ b/app/views/messages/_navbar.html.erb
@@ -8,13 +8,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</a>
+            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</aa></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <!-- <li>
                     <a class="page-scroll" href="/#services">Our services</a>
                 </li>
                 <li>
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <a class="page-scroll" href="/#contact">Contact</a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
