--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -11,23 +11,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top"><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</a>
+            <a class="navbar-brand page-scroll" href="/#page-top"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a>  <!-- text-primary -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="/#howitworks">How it works</a>
+                    <a class="page-scroll" href="/#howitworks"> <aa> How it works </aa> </a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#services">Our services</a>
+                    <a class="page-scroll" href="/#services"><aa>Our services</aa></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#examples">Examples</a>
+                    <a class="page-scroll" href="/#examples"><aa>Examples</aa></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#contact">Contact</a>
+                    <a class="page-scroll" href="/#contact"><aa>Contact</aa></a>
                 </li>
             </ul>
         </div>
