--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -10,12 +10,15 @@
                       launcher.click();
                       };
                     </script>
+                    
                     <!-- Embed Video as Background-->
                     <div class="container-fluid">
-                        <div style="width:initial">
+                        <div >
                             <%= video_tag("https://s3-eu-west-1.amazonaws.com/instelaltd/videos/office_video.mp4", :poster => "movie-snapshot-frame1.png", :controls => true, :autobuffer => false, :autoplay => true, :loop => true, :id => "video-background") %>
                         </div>
                     </div>
+
+
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 key_text">
