Remove sound icon from browser and add logo to browser address bar

--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -14,7 +14,7 @@
                     <!-- Embed Video as Background-->
                     <div class="container-fluid">
                         <div >
-                            <%= video_tag("https://s3-eu-west-1.amazonaws.com/instelaltd/videos/office_video.mp4", :poster => "movie-snapshot-frame1.png", :controls => true, :autobuffer => false, :autoplay => true, :loop => true, :id => "video-background") %>
+                            <%= video_tag("https://s3-eu-west-1.amazonaws.com/instelaltd/videos/office_video.mp4", :poster => "movie-snapshot-frame1.png", :controls => true, :autobuffer => false, :autoplay => true, :loop => true, :id => "video-background", :muted => true) %>
                         </div>
                     </div>
 
