--- a/app/views/layouts/creative.html.erb
+++ b/app/views/layouts/creative.html.erb
@@ -24,7 +24,7 @@
 	<!DOCTYPE html>
 	<html>
 	<head>
-		%= favicon_link_tag 'favicon-magic.ico' %>
+		<%= favicon_link_tag 'favicon-magic.ico' %>
 		<%= display_meta_tags %>
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
