Front End Sign Up, Log In, Example Images and screen siszing,  Update Database

--- a/app/views/devise/registrations/_navbar.html.erb
+++ b/app/views/devise/registrations/_navbar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span> 
             </button>
-            <a class="navbar-brand page-scroll" href="/"><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</a> <!-- text-primary -->
+            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a> <!-- text-primary -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,7 +24,7 @@
                     <a class="page-scroll" href="/#examples">Examples</a>
                 </li> -->
                 <li>
-                    <a class="page-scroll" <%= link_to 'Contact Us', contact_path  %> </a>
+                    <a class="page-scroll" href="/contact"><aa>Contact Us</aa></a>
                     <!-- <a class="page-scroll" href="/#contact">Contact</a> -->
                 </li>
                 <li id="register_button">
