--- a/app/views/creatives/_example.html.erb
+++ b/app/views/creatives/_example.html.erb
@@ -1,4 +1,4 @@
- <section class="no-padding" id="examples">
+<section class="no-padding" id="examples">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -13,7 +13,7 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
                         <div class="col-lg-10 col-lg-offset-1 col-sm-12 col-xs-12">
-                            <div class="col-lg-4 col-md-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 hidden-sm ">
                                 <%= image_tag "creative/portfolio/tech_chat.png", class: "img-responsive screenshot", alt: "" %>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
@@ -27,17 +27,34 @@
 
                     <div class="item">
                         <div class="col-lg-10 col-lg-offset-1 col-sm-12">
-                            <div class="col-lg-4 col-md-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 hidden-sm">
                                 <%= image_tag "creative/portfolio/hand_chat.png", class: "img-responsive screenshot", alt: "" %>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
+                                <%= image_tag "creative/portfolio/task_chat.png", class: "img-responsive screenshot", alt: "" %>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
+                                <%= image_tag "creative/portfolio/tech_chat.png", class: "img-responsive screenshot", alt: "" %>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item ">
+                        <div class="col-lg-10 col-lg-offset-1 col-sm-12">
+                            <div class="col-lg-4 col-md-4 hidden-sm">
+                                <%= image_tag "creative/portfolio/task_chat.png", class: "img-responsive screenshot", alt: "" %>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <%= image_tag "creative/portfolio/tech_chat.png", class: "img-responsive screenshot", alt: "" %>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
-                                <%= image_tag "creative/portfolio/task_chat.png", class: "img-responsive screenshot", alt: "" %>
+                                <%= image_tag "creative/portfolio/hand_chat.png", class: "img-responsive screenshot", alt: "" %>
                             </div>
                         </div>
+
+
                     </div>
+
                 </div>
 
               <!-- Controls -->
