--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,59 +1,149 @@
 <%= render 'navbar' %>
+
 <script src="https://checkout.stripe.com/checkout.js"></script>
 <script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 <%= javascript_include_tag 'creative/registration' %>
 
-<header id="page-top" class='accounts_header'>
-    <div class="header-content">
-        <div class="container-fluid">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-                <h3 style="text-align: center; color: white; font-weight: 700; font-size: 1.875em;">Sign Up To Order Services</h3>
-                <p></p>
-                <%= form_for(resource, as: resource_name, validate: true, url: account_registration_path(resource_name)) do |f| %>
-                  <%= devise_error_messages! %>
-                  <span class="payment-errors"></span>
-                  <input type="hidden" name='payment_token'/>
-                  <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" />
-                  <div class="form-group">
-                    <%= f.text_field :full_name, :required => true, placeholder: 'Full Name', class: 'form-control'%>
-                  </div>
-                  <div class="form-group">
-                    <%= f.text_field :company, :required => true, placeholder: 'Company', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.email_field :email, :required => true, placeholder: 'Email', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.password_field :password, :required => '', placeholder: 'Password', class: 'form-control'  %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.password_field :password_confirmation, :required => '', placeholder: 'Password Confirmation', class: 'form-control'%>
-                  </div>
-                  <br>
-                  <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6" style="position:relative; bottom:0;">
-                    <button id="paymentButton" class= 'page-scroll btn btn-primary outline'>CARD DETAILS</button>
-                    </div>
-                    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4  col-sm-4 col-sm-offset-4 col-xs-5 col-xs-offset-1" style="position:relative; bottom:0;">
-                    <%= link_to image_tag("accounts/light_solid.png", :class => 'img-responsive'), "https://stripe.com/about"%>
-                    </div>
-                    <br>
-                  </div>
-                  <br>
-                  <div class="form-group">
-                    <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
-                  </div>
-                  <div id="stripeResponse"></div>
-                  <p style="text-align: center; color: white;font-size: 14px;">We only charge your credit card once a service has been delivered. <br><br>
-                  By registering your details you agree that you have read and accepted the <a href="/pages/terms" style="color:white; font-size:15px; text-decoration: underline;">TERMS AND CONDITIONS</a>
-                <% end %>
-            </div>
-        </div>
-    </div>
-</header>
 
-<%= render 'creatives/contact' %>
+<!-- <body style="background-color: #e8ecf0;">
+ --><body>
+
+</br></br></br></br></br> </br>
+<h1 style="text-align: center;">Create An Account</h1>
+<br>
+<div class="container-small">
+  <%= form_for(resource, as: resource_name, validate: true, url: account_registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+  <span class="payment-errors"></span>
+  <input type="hidden" name='payment_token'/>
+  <input type='hidden' name='stripe_key' value="<%= Rails.application.secrets.stripe_publishable_key %>" />
+
+  <div class="box-regist user-account-section">
+    
+    <div class="title-regist">
+      <div class="titleline-regist"><h3>Account Details</h3></div>
+    </div>
+    
+    <div class="innerbox-regist">
+      <div class="row-fluid form-row row">
+        <div class="col-xs-6">
+          <label class="label-pre">Full Name</label>
+          <div class="form-group">
+            <%= f.text_field :full_name, :required => true, class: 'form-control'%>
+          </div>                     
+        </div>
+
+        <div class="col-xs-6">
+          <label class="label-pre">Company</label>
+          <div class="form-group">
+            <%= f.text_field :company, :required => true, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div class="row-fluid form-row row">
+        <div class="col-xs-12">
+          <label  class="label-pre">Email</label>
+          <div class="form-group">
+            <%= f.email_field :email, :required => true, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div class="box-regist user-account-section">
+    <div class="title-regist">
+      <div class="titleline-regist"><h3>Office Address</h3></div>
+    </div>
+
+    <div class="innerbox-regist">
+      <div class="row-fluid form-row row">
+        <div class="col-xs-6">
+          <label class="label-pre">Address Line #1</label>
+          <div class="form-group">
+            <%= f.text_field :address_l1, :required => true, class: 'form-control'%>
+          </div>
+        </div>
+
+        <div class="col-xs-6">
+          <label class="label-pre">Address Line #2</label>
+          <div class="form-group">
+            <%= f.text_field :address_l2, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div class="row-fluid form-row row">
+        <div class="col-xs-6">
+          <label class="label-pre">Post Code</label>
+          <div class="form-group">
+            <%= f.text_field :postcode, :required => true, class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="col-xs-6">
+          <label class="label-pre">Phone</label>
+          <div class="form-group">
+            <%= f.text_field :mobile_phone, :required => true, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+    </div>  
+  </div>
+
+
+  <div class="box-regist user-account-section">
+    <div class="title-regist">
+      <div class="titleline-regist"><h3>Payment Details</h3></div>
+    </div>
+    <div class="innerbox-regist">
+      <div class="row-fluid form-row row">
+        <div class="col-xs-12" align="center">
+          <button id="paymentButton" class= 'page-scroll btn btn-primary outline' style='border-color: black; color: black; font-weight: 500;'>Add Card</button>
+        </div>             
+      </div>
+      <div classs="mtop30">
+        <div class="card-form-security mtop30"> <i class="fa fa-2x fa-lock wow bounceIn lock" style="color: #3abc77;"></i><span class="security-text">Your details are securely stored with our payment processing partner using bank-grade encryption.</span>
+        </div>
+      </div>
+      <br></br>    
+    </div>
+  </div>
+
+  <div class="box-regist user-account-section">
+    <div class="title-regist">
+      <div class="titleline-regist"><h3>Password</h3></div>
+    </div>
+    <div class="innerbox-regist">
+      <div class="row-fluid form-row row">
+        <div class="col-xs-6 mbot30">
+          <label class="label-pre">Password</label>
+          <div class="form-group">
+            <%= f.password_field :password, :required => '', class: 'form-control'  %>
+          </div>
+        </div>
+        <div class="col-xs-6 mbot30">
+          <label class="label-pre">Password Confirmation</label>
+          <div class="form-group">
+            <%= f.password_field :password_confirmation, :required => '', class: 'form-control'%>
+          </div>
+        </div>
+
+        <div align="center">
+          <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account', style: 'border-color: black; color: black; font-weight: 500;' %>
+        </div>
+        <div id="stripeResponse"></div>
+        <p style="text-align: center; font-size: 14px;" class="mtop30"><!-- We only charge your credit card once a service has been delivered. <br><br> -->
+          By registering your details you agree that you have read and accepted the <a href="/pages/terms" style=" font-size:15px; text-decoration: underline;">TERMS AND CONDITIONS</a>
+        </p>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
+
+</body>
 <%= render 'creatives/footer' %>
