Contact Us Front End, PageSpeed Compression and google fonts

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -163,9 +163,13 @@ Log In Page:
   border-radius: 4px;
 }
 
-.form-control:focus, .form-control:focus + .fa {
+.form-control:focus + .fa {
   border-color: #10CE88;
   color: #10CE88;
+}
+.form-control:focus, .form-control:focus + .fa {
+  border-color: #10CE88;
+  /*color: #10CE88;*/
 }
 
 .form-group .fa {
