--- a/app/views/devise/registrations/_navbar.html.erb
+++ b/app/views/devise/registrations/_navbar.html.erb
@@ -8,24 +8,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span> 
             </button>
-            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a> <!-- text-primary -->
+            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a> 
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <!-- <li>
-                    <a class="page-scroll" href="/#services">Our services</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#howitworks">How it works</a>
-                </li> -->
-                <!-- <li>
-                    <a class="page-scroll" href="/#examples">Examples</a>
-                </li> -->
+
                 <li>
                     <a class="page-scroll" href="/contact"><aa>Contact Us</aa></a>
-                    <!-- <a class="page-scroll" href="/#contact">Contact</a> -->
                 </li>
                 <li id="register_button">
                     <%- if account_signed_in? %>
@@ -34,7 +25,5 @@
                 </li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
