--- a/app/views/devise/passwords/_navbar.html.erb
+++ b/app/views/devise/passwords/_navbar.html.erb
@@ -8,43 +8,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</aa></a>
+            <a class="navbar-brand page-scroll" href="/"><aa><i class="fa fa-1x fa-magic wow bounceIn"></i> Instela</aa></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <!-- <li>
-                    <a class="page-scroll" href="/#services">Our services</a>
-                </li>
+                
                 <li>
-                    <a class="page-scroll" href="/#howitworks">How it works</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#examples">Examples</a>
-                </li> -->
-                <li>
-                    <a class="page-scroll" <%= link_to 'Contact Us', contact_path  %> </a>
-<!--                     <a class="page-scroll" href="/#contact">Contact</a>
- -->            </li>
-                <li>
-                    <%- if account_signed_in? %>
-                        <%=link_to 'MY ACCOUNT', edit_account_registration_path %>
-                    <%- else %>
-                        <%= link_to 'LOG IN', new_account_session_path %>
-                    <% end %>
-                 </li>
-                <li id="register_button">
-                    <%- if account_signed_in? %>
-                        <%= link_to 'LOG OUT', destroy_account_session_path, method: :delete, class: "page-scroll btn btn-primary btn-lg outline"  %>
-                    <%- else %>
-                        <%= link_to 'SIGN UP', new_account_registration_path, class: "page-scroll btn btn-primary btn-lg outline" %>
-                    <% end %>
-                </li>
+                    <a class="page-scroll" href="/contact"><aa>Contact Us</aa></a>
+               </li>
+               
 
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
