--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,36 +1,73 @@
 <%= render 'navbar' %>
 
-<header id="page-top" class='accounts_header'>
-    <div class="header-content">
-        <div class="container-fluid">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
-                <h3 style="text-align: center; color: white;">Get in touch and let us know how we can help</h3>
-                <p></p><br></br>
-                <%= form_for @message, url: contact_path do |f| %>
-                  <%= f.error_messages %>
+<body>
 
-                  <div class="form-group">
-                    <%= f.text_field :company, :required => true, placeholder: 'Company', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.text_field :email, :required => true, placeholder: 'Email', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.text_field :mobile, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.text_area :content, :required => true, placeholder: 'Message',rows: "7", class: 'form-control' %>
-                  </div>
-                  <br>
-                  <div class="form-group">
-                    <%= f.submit 'SEND', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
-                  </div>
-                  <br>
-                <% end %>
-            </div>
+</br></br></br></br></br> 
+<h2 style="text-align: center;">Get in touch and let us know how we can help</h2>
+<br>
+<div class="container-small">
+  <%= form_for @message, url: contact_path do |f| %>
+                  <%= f.error_messages %>
+  
+  <div class="box-regist user-account-section">
+    
+    <!-- <div class="title-regist">
+      <div class="titleline-regist"><h3>Account Details</h3></div>
+    </div> -->
+    
+    <div class="innerbox-regist">
+      <div class="row-fluid form-row row">
+        <div class="col-xs-6">
+          <label class="label-pre">Company</label>
+          <div class="form-group">
+            <%= f.text_field :company, :required => true, class: 'form-control' %>
+          </div>
         </div>
+
+        <div class="col-xs-6">
+          <label class="label-pre">Phone</label>
+          <div class="form-group">
+             <%= f.text_field :mobile, :required => true, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div class="row-fluid form-row row">
+        <div class="col-xs-12">
+          <label  class="label-pre">Email</label>
+          <div class="form-group">
+            <%= f.email_field :email, :required => true, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row-fluid form-row row">
+        <div class="col-xs-12">
+          <label  class="label-pre">Message</label>
+          <div class="form-group">
+            <%= f.text_area :content, :required => true,rows: "7", class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div align="center">
+          <%= f.submit 'SEND', class: 'page-scroll btn btn-primary btn-lg outline submit-account', style: 'border-color: black; color: black; font-weight: 500;' %>
+        </div>
+
+
+      <% end %>
+
+      </div>
+
     </div>
-</header>
+  </div>
+</body>
+
+
+
+
+
 
 <%= render 'creatives/contact' %>
 <%= render 'creatives/footer' %>
