--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -23,7 +23,7 @@
                         <div class="row">
                             <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 key_text">
                                 <br>
-                                <p class="tagline">We Solve Any office problem. Instantly<span style="color: #f05f40"></span></p>
+                                <h1 class="tagline">We Solve Any office problem. Instantly<span style="color: #f05f40"></span></h1>
                                 <!-- <p class="tagline">We fix <span style="color: #f05f40">we'll fix it</span></p>
                                 <p class="tagline">If it's broken, <span style="color: #f05f40">we'll fix it</span></p>
                                 <p class="tagline">Fix it this <span style="color: #f05f40">Instant</span></p>
