add discount to charges

--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -9,6 +9,10 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-1x fa-magic wow bounceIn" ></i>Instela</a> <!-- style="colour: #FFFFFF" -->
+
+                      <!--   <%= image_tag "instela-5-2-colors-Converted.ico", class: "fa", alt: "" %>
+                                        <img class="fa fa-1x wow bounceIn"  src="/assets/instela-5-2-colors-Converted.ico"> -->
+
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
