--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -18,7 +18,12 @@
                     <%= number_field_tag :duration, nil, :required => true, :step => 'any', placeholder: 'Duration', class: 'form-control' %>
                   </div>
                   <div class="form-group">
+                    Materials cost:
                     <%= number_field_tag :materials_total_cost, 0, :required => true, :step => 'any', placeholder: 'Materials Cost', class: 'form-control' %>
+                  </div>
+                  <div class="form-group">
+                    Discount (as a percentage -eg 5 for 5%):
+                    <%= number_field_tag :discount, 0, :required => true, :step => 'any', placeholder: 'Discount', class: 'form-control' %>
                   </div>
                   <br>
                   <div class="form-group">
